<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_record"
        android:id="@+id/name_header"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/text_size"
        android:layout_marginLeft="@dimen/marginHeader"
        android:layout_marginTop="@dimen/marginHeader" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_record"
        android:id="@+id/date_header"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/text_size"
        android:layout_marginRight="@dimen/marginHeader"
        android:layout_marginTop="@dimen/marginHeader" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_record"
        android:id="@+id/time_header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/marginHeader" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:id="@+id/records_list"
        android:layout_below="@+id/name_header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/marginRecord_top" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/erase_manage"
        android:id="@+id/delete_records"
        android:layout_below="@+id/records_list"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/buy_marginTop"
        android:background="@drawable/red_button"
        android:layout_marginLeft="@dimen/marginHeader"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white" />
</RelativeLayout>