<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.luislopez.poprocess.Manage">

    <TextView
        android:text="@string/created_manage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size"
        android:id="@+id/configurations_text" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/listView_height"
        android:id="@+id/configurations_listView"
        android:layout_below="@+id/configurations_text"
        android:layout_centerHorizontal="true" />


    <TextView
        android:text="@string/notifications_manage"
        android:layout_width="@dimen/notifications_textWidth"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:id="@+id/notifications_text"
        android:layout_below="@+id/configurations_listView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_config"
        android:id="@+id/savemanage_button"
        android:background="@drawable/red_button"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white"
        android:layout_below="@+id/record_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/TopMargin_button" />


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notifications_switch"
        android:track="@drawable/track"
        android:thumb="@drawable/thumb_custom"
        android:switchTextAppearance="@style/SwitchTextColor"
        android:layout_alignBaseline="@+id/notifications_text"
        android:layout_alignBottom="@+id/notifications_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:id="@+id/record_btn"
        android:layout_alignTop="@+id/savemanage_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/blue_button"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white" />

    <TextView
        android:text="@string/switch_textRecord"
        android:layout_width="@dimen/notifications_textWidth"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:id="@+id/record_text"
        android:layout_below="@+id/notifications_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/between_textManage" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/record_switch"
        android:track="@drawable/track"
        android:thumb="@drawable/thumb_custom"
        android:switchTextAppearance="@style/SwitchTextColor"
        android:layout_toEndOf="@+id/notifications_text"
        android:layout_alignBottom="@+id/record_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
